--- a/templates/question/homepage.html.twig
+++ b/templates/question/homepage.html.twig
@@ -20,9 +20,9 @@
                     <div class="row">
                         <div class="col-2 text-center">
                             <img src="{{ asset('images/tisha.png') }}" width="100" height="100">
-                            <div class="d-block mt-3 vote-arrows">
-                                <a class="vote-up" href="#"><i class="far fa-arrow-alt-circle-up"></i></a>
-                                <a class="vote-down" href="#"><i class="far fa-arrow-alt-circle-down"></i></a>
+                            <div class="d-block mt-3 vote-arrows js-vote-arrows">
+                                <a class="vote-up" href="#" data-direction="up"><i class="far fa-arrow-alt-circle-up"></i></a>
+                                <a class="vote-down" href="#" data-direction="down"><i class="far fa-arrow-alt-circle-down"></i></a>
                             </div>
                         </div>
                         <div class="col">
@@ -48,9 +48,9 @@
                 <div class="row">
                     <div class="col-2 text-center">
                         <img src="{{ asset('images/magic-photo.png') }}" width="100" height="100">
-                        <div class="d-block mt-3 vote-arrows">
-                            <a class="vote-up" href="#"><i class="far fa-arrow-alt-circle-up"></i></a>
-                            <a class="vote-down" href="#"><i class="far fa-arrow-alt-circle-down"></i></a>
+                        <div class="d-block mt-3 vote-arrows js-vote-arrows">
+                            <a class="vote-up" href="#" data-direction="up"><i class="far fa-arrow-alt-circle-up"></i></a>
+                            <a class="vote-down" href="#" data-direction="down"><i class="far fa-arrow-alt-circle-down"></i></a>
                         </div>
                     </div>
                     <div class="col">
